Tue Mar  6 10:50:29 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* parse.y (primary): rescue and ensure clauses should be allowed
	  to appear in singleton method body.

Mon Mar  5 17:25:13 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (proc_eq): compare Procs using blocktag equality.

	* eval.c (proc_to_s): stringify according to block tag address.

Mon Mar  5 17:19:56 2001  WATANABE Hirofumi  <eban@ruby-lang.org>

	* win32/win32.c (gettimeofday): use GetLocalTime() instead of ftime()
	  for high-resolution timing.

Sun Mar  4 20:45:20 2001  Akinori MUSHA  <knu@iDaemons.org>

	* ext/extmk.rb.in, lib/mkmf.rb: add C++ rules in addition to C
	rules.

Sun Mar  4 17:01:09 2001  WATANABE Hirofumi  <eban@ruby-lang.org>

	* string.c (trnext): support backslash escape in String#tr.

Wed Feb 28 11:02:41 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* string.c (rb_str_delete_bang): delete! should take at least 1
	  argument. 

Tue Feb 27 16:38:15 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (ev_const_get): retrieve Object's caonstat if no current
	  class is available (e.g. defining singleton class for Fixnums).

	* eval.c (ev_const_defined): check Object's constant if no current
	  class is available (e.g. defining singleton class for Fixnums).

	* eval.c (proc_call): ignore block to `call' always, despite of
	  being orphan or not.

Wed Feb 27 10:16:32 2001  Nobuyoshi Nakada  <nobu.nakada@nifty.ne.jp>

	* eval.c (rb_yield_0): should check based on rb_block_given_p()
	  and rb_f_block_given_p().

Mon Feb 26 16:20:27 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* ruby.c (proc_options): call ruby_show_version() just once.

Mon Feb 26 00:04:52 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (proc_call): should not modify ruby_block->frame.iter
	  based on ruby_frame->iter altered by PUSH_ITER().

Mon Feb 26 05:27:52 2001  Wakou Aoyama  <wakou@fsinet.or.jp>

	* lib/net/telnet.rb: #telnetmode(), #binmode(): bug fix.