@@ -1,4 +1,4 @@
 #define RUBY_VERSION "1.6.3"
-#define RUBY_RELEASE_DATE "2001-03-06"
+#define RUBY_RELEASE_DATE "2001-03-07"
 #define RUBY_VERSION_CODE 163
-#define RUBY_RELEASE_CODE 20010306
+#define RUBY_RELEASE_CODE 20010307
